# go-opencc

./: .gitignore  CMakeLists.txt  README.md  build.sh  go.mod  opencc.cpp  opencc.go  opencc.wasm  opencc_test.go
data/: InstallScripts.json
